# cyanoConstruct

./: .envrc  .gitignore  About.docx  CCDatabase.py  CCRoutes.py  Component.py  ComponentDatabaseVersion.py  CyanoConstructMod.py  Database.py  EnumsExceptions.py  README.md  Routes.py  RunThisFile.py  SessionUsers.py  SessionUsers2.py  TestingDatabase.py  __init__.py  allSessions.py  app.db  assemblycode.csv  component.py  config.py  cyano.db  database.py  defaultUserFuncs.py  enumsExceptions.py  fixPrimers.py  flake.nix  fly.toml  misc.py  ok.py  pyproject.toml  routes.py  routes2.py  routesFuncs.py  sessionUsers.py  testBackbone.py  testDatabase.py  testOutputs.txt  users.py
.github/workflows/: fly-deploy.yml
cyanoconstruct/: __init__.py  auth.py  component.py  database.py  enumsExceptions.py  fixPrimers.py  routes.py  routesFuncs.py  users.py
cyanoconstruct/templates/: 404.html  about.html  account.html  assembly.html  base.html  library.html  login.html  noSeq.html  privacy.html
migrations/: env.py
migrations/versions/: 116f506ff217_trying_again.py  a83a725c7ac5_.py  bd2054290318_.py  e102134316d4_.py  f2f56e52f063_.py  g8df7b6ecb72_.py  ha635b3eb6b9_.py
misc/: DBbackup.py
templates/: 500.html  about.html  account.html  assembly.html  assembly2.html  base.html  colorScheme.html  components.html  design.html  domesticate.html  index.html  indexCC.html  library.html  login.html  login2.html  noSeq.html  privacy.html  untitled.html
web/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+22 files in other folders)
