[tool.poetry]
name = "cyanoconstruct"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.5.1"
flask-login = "^0.5.0"
flask-migrate = "^2.7.0"
google-auth = "^1.28.0"
requests = "^2.25.1"
pymysql = "^1.0.2"
sqlalchemy-stubs = "^0.4"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
