[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyanoconstruct"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
authors = [
  { name = "Andrew Pan", email = "a@tny.town" }
]

dependencies = [
  "flask",
  "flask-pydantic",
  "flask-sqlalchemy",
  "flask-login",
  "flask-migrate",
  "sqlalchemy",
  "google-auth",
  "requests",
  "pydantic",
  "pymysql",
  "mypy",
  "webauthn",
  #flask-pydantic = "^0.12"
  #flask-sqlalchemy = "^3.1.1"
  #flask-login = "^0.6.3"
  #flask-migrate = "^2.7.0"
  #sqlalchemy = "^2.0.25"
  #google-auth = "^1.28.0"
  #requests = "^2.31.0"
  #pydantic = "^2"
  #pymysql = "^1.1.0"
  #mypy = "^1.8.0"
  #webauthn = "^2.0.0"
  #urllib3 = "^2.2.0"
  "urllib3",
  "gunicorn>=23.0.0",
]
